--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+
 
 *{
     box-sizing: border-box;
@@ -8,3 +6,112 @@
     padding: 0;
 }
 
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.font-weight-title{
+    font-weight: 600;
+}
+.font-weight-span{
+    font-weight: 400;
+}
+.line-height{
+    line-height: 1.2;
+}
+.font-size-span{
+    font-size: 1rem;
+}
+.font-size-title{
+    font-size: 18px;
+}
+span{
+    font-family: 'Noto Sans Kawi', sans-serif;
+}
+
+
+.form{
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+    height: 550px;
+    width: 400px;
+    border: 1px solid #BDBDBD;
+    border-radius: 25px;
+    padding: 60px 40px 40px 40px;
+}
+
+.container-title{
+    margin-bottom: 1.2rem;
+}
+
+.container-title > div{
+    margin-bottom: 1rem;
+}
+
+
+.input-login{
+    height: 2.5rem;
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #BDBDBD;
+    margin-bottom: 1rem;
+}
+
+.btn-login{
+    height: 2.3rem;
+    width: 100%;
+    border: none;
+    background-color: #2F80ED;
+    border-radius: 10px;
+    font-weight: 600;
+    font-family: 'Noto Sans Kawi', sans-serif;
+    color: white;
+    font-size: .8rem;
+}
+
+.social-profile{
+    font-size: .8rem;
+    color: #828282;
+}
+
+.social{
+    margin: 1.5rem 0 .7rem 0;
+}
+
+.member{
+    margin: 1rem 0 1rem 0;
+}
+
+.container-media{
+    text-align: center;
+}
+
+a{
+    color: #2D9CDB;
+    text-decoration: none;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 500,
+  'GRAD' 0,
+  'opsz' 20
+}
+
+.container-input-icon{
+    position: relative;
+}
+
+.container-input-icon > span{
+    position: absolute;
+    
+    top: 50%;
+    transform: translateY(-50%);
+}
