--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Noto Sans Kawi', sans-serif;
 }
 
 main{
@@ -110,14 +111,6 @@ a{
     text-decoration: none;
 }
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 500,
-  'GRAD' 0,
-  'opsz' 20
-}
-
 .container-input-icon{
     position: relative;
     
@@ -148,7 +141,7 @@ a{
     height: 4rem;
 }
 .height-container-img{
-    height: 6rem;
+    height: 7rem;
 }
 .container-table{
 
@@ -157,6 +150,14 @@ a{
     margin: auto;
 }
 
+.container-photo-personal{
+    display: flex;
+    align-items: center;
+}
+
+.container-photo-personal > div{
+    margin-left: 4rem;
+}
 
 
 .container-profile-data{
@@ -178,6 +179,7 @@ a{
     margin: 1.5rem 3.5rem 0 0;
     padding: .5rem 2rem;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 
@@ -230,6 +232,7 @@ table{
 .logout{
     display: flex;
     justify-content: end;
+    align-items: center;
     margin-top: 2rem;
     margin-right: 3rem;
 }
@@ -237,5 +240,211 @@ table{
 .btn-logout{
     border: none;
     background-color: transparent;
+    margin-left: 1rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.account-profile{
+    font-weight: 700;
+    font-size: 12px;
+}
+
+.back{
+    color: #2D9CDB;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.btn-back{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.container-back{
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.container-change{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: auto;
+    margin-top: 3rem;
+}
+
+.subcontainer-change{
+    border: 1px solid #E0E0E0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 2.5rem 1rem 1rem 3rem;
+}
+
+.subcontainer-change > h1{
+    font-weight: 400;
+    font-size: 30px;
+}
+
+.changes{
+    font-weight: 500;
+    font-size: 13px;
+    color: #828282;
+
+}
+
+.container-form > form{
+    width: 100%;
+}
+
+.container-form-change{
+    margin-top: 1.5rem;
+}
+
+.container-form-change > form{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.btn-save{
+    margin: .5rem 0 1rem 0;
+    width: 25%;
+    background-color: #2F80ED;
+    border-radius: 8px;
+    border: none;
+    color: #FFFFFF;
+    height: 35px;
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.container-form-change > form > input{
+    border: 1px solid #828282;
+    border-radius: 12px;
+    margin: 0 0 .8rem 0;
+    height: 40px;
+    padding: 0 0 0 1rem;
+}
+
+.container-form-change > form > textarea{
+    border: 1px solid #828282;
+    border-radius: 12px;
+    margin: 0 0 .8rem 0;
+    height: 80px;
+    padding: 1rem 0 0 1rem;
+}
+
+.container-form-change > form > label{
+    color: #4F4F4F;
+    font-weight: 600;
+    font-size: 12px;
+    margin-bottom: .4rem;
+}
+
+.modal{
+    display: none;
+    flex-direction: column;
+    width: 10%;
+    padding: 1rem;
+    position: fixed;
+    border: 1px solid #E0E0E0;
+    border-radius: 10px;
+    margin-top: 15rem;
+}
+
+.btn-profile-logout{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    margin-bottom: .5rem;
+    padding: .8rem;
+    width: 100%;
+    color: #4F4F4F;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: left;
+    display: flex;
+    align-items: center;
     
+}
+
+.modal > button > img{
+    width: 15px;
+    margin-right: .5rem;
+}
+
+
+.btn-profile-logout:hover{
+    background-color: #F2F2F2;
+    border-radius: 10px;
+}
+
+.btn-logout-design{
+    border: 1px solid transparent;
+    border-top: 1px solid #E0E0E0; 
+    background-color: transparent;
+    margin-top: .2rem;
+    color: red;
+    cursor: pointer;
+    width: 100%;
+    padding: 1.5rem .8rem .8rem .8rem;
+    
+    font-size: 12px;
+    font-weight: 500;
+    text-align: left;
+    display: flex;
+    align-items: center;
+}
+
+
+.btn-logout-design:hover{
+    background-color: #F2F2F2;
+    border-radius: 10px;
+    
+}
+
+.btn-logout-design > img{
+    width: 15px;
+}
+
+.btn-logout-design > a{
+    color: #EB5757;
+}
+
+.photo{
+    border-radius: 10px;
+    width: 80px;
+}
+
+.photo:hover{
+    background-color: #4F4F4F;
+}
+
+.container-photo > label{
+    display: flex;
+    align-items: center;
+    color: #828282;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.container-photo > label > span{
+    margin-left: 2rem;
+}
+
+.container-photo{
+    margin-bottom: 1.5rem;
+    
+}
+
+.photo-logout{
+    width: 30px;
+    border-radius: 8px;
+    margin-right: 1rem;
 }
